# ves

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TOUR.md  grammar.EBNF
experiments/: Cargo.toml  README.md
experiments/benches/: fibonacci.rs  hashes.rs
experiments/src/: lib.rs  vm_bytes.rs  vm_enum.rs  vm_enum_inline_caching.rs  vm_enum_instruction_inline_caching.rs
ves-backend/: Cargo.toml
ves-backend/derive-trace/: Cargo.toml
ves-backend/derive-trace/src/: lib.rs
ves-backend/src/: builder.rs  emit.rs  lib.rs  macros.rs  opcode.rs
ves-backend/src/emitter/: builder.rs  dis.rs  emit.rs  mod.rs  opcode.rs
ves-backend/src/gc/: mod.rs  naive.rs  proxy_allocator.rs  trace.rs
ves-backend/src/objects/: cache_layer.rs  handle.rs  macros.rs  mod.rs  nanbox.rs  peel.rs  value.rs  ves_fn.rs  ves_int.rs  ves_object.rs  ves_struct.rs
ves-backend/src/runtime/: call_frame.rs  inline_cache.rs  mod.rs  symbols.rs  vm.rs
ves-backend/src/values/: cache_layer.rs  functions.rs  handle.rs  mod.rs  object.rs  strings.rs  structs.rs  value.rs
ves-backend/src/vm/: call_frame.rs  mod.rs  symbols.rs  vm.rs
ves-backend/tests/: t01_simple_arithmetic_expr.test  t02_builtin_type_comparisons.test  t03_struct_type_comparison.test  t04_field_check.test  t05_global_and_local_variables.test  t06_many_local_variables.test  t07_print.test  t08_global_variable_access.test  t09_local_variable_access.test  t10_nested_scope_local_resolution_with_shadowing.test  t11_empty_loop.test  t12_loop_with_body.test  t13_loop_inside_scope.test  t14_continue_in_empty_loop.test  t15_break_in_empty_loop.test  t16_continue_in_loop_with_body.test  t17_break_in_loop_with_body.test  t18_break_and_continue_in_named_loops.test  t19_global_assignment.test  t20_global_compound_assignment.test  t21_local_assignment.test  t22_local_compound_assignment.test  t23_comma_expression.test  t24_get_property.test  t25_get_property_optional.test  t26_set_property.test  t27_get_item.test  t28_set_item.test  t29_nested_get_access.test  t30_prefix_increment.test  t31_postfix_increment.test  t32_nested_prefix_increment.test  t33_empty_for_loop.test  t34_unlabeled_for_loop.test  t35_unlabeled_while_loop.test  t36_while_loop_with_break_and_continue.test  t37_named_while_loop.test  t38_loop_for_with_break_and_continue.test  t39_unlabeled_foreach_loop.test  t40_labeled_foreach_with_control.test  (+17 more)
ves-backend/tests/codegen/: t01_simple_arithmetic_expr.test  t02_builtin_type_comparisons.test  t03_struct_type_comparison.test  t04_field_check.test  t05_global_and_local_variables.test  t06_many_local_variables.test  t07_print.test  t08_global_variable_access.test  t09_local_variable_access.test  t10_nested_scope_local_resolution_with_shadowing.test  t11_empty_loop.test  t12_loop_with_body.test  t13_loop_inside_scope.test  t14_continue_in_empty_loop.test  t15_break_in_empty_loop.test  t16_continue_in_loop_with_body.test  t17_break_in_loop_with_body.test  t18_break_and_continue_in_named_loops.test  t19_global_assignment.test  t20_global_compound_assignment.test  t21_local_assignment.test  t22_local_compound_assignment.test  t23_comma_expression.test  t24_get_property.test  t25_get_property_optional.test  t26_set_property.test  t27_get_item.test  t28_set_item.test  t29_nested_get_access.test  t30_prefix_increment.test  t31_postfix_increment.test  t32_nested_prefix_increment.test  t33_empty_for_loop.test  t34_unlabeled_for_loop.test  t35_unlabeled_while_loop.test  t37_named_while_loop.test  (+31 more)
ves-middle/: Cargo.toml  README.md  build.rs  graph.dot
ves-middle/src/: constant_folder.rs  imports.rs  lib.rs  macros.rs  registry.rs  resolver.rs  resolver_definitions.rs  ves_path.rs
ves-middle/tests/: fold1_test_constant_folding.test  fold2_test_let_variable_propagation.test  fold3_test_control_flow_is_folded.test  t10_shadowing.test  t10_unused_locals.test  t11_cyclic_import.test  t12_shadowing_import.test  t13_missing_exports.test  t14_registry_imports.test  t15_fn_doesnt_declare_as_sub_expr.test  t16_struct_doesnt_declare_as_sub_expr.test  t17_fn_struct_dont_declare_local.test  t18_unknown_magic.test  t19_property_redeclaration.test  t1_test_cannot_assign_to_let.test  t20_unknown_property.test  t2_test_variables_must_be_defined.test  t3_test_globals_are_forward_declared.test  t4_test_shadowing_unused_variable_warning.test  t5_cannot_break_outside_of_a_loop.test  t5_test_undefined_loop_labels_are_detected.test  t6_test_return_usage.test  t7_self_may_be_used_only_inside_methods.test  t7_test_return_usage.test  t8_self_may_be_used_only_inside_methods.test  t8_test_for_loops.test  t9_test_for_loops.test  t9_unused_locals.test
ves-parser/: Cargo.toml  README.md
ves-parser/examples/: usage.rs
ves-parser/src/: lexer.rs  lib.rs  macros.rs  parser.rs
ves-parser/tests/: t10_string_interpolation.test  t11_parse_call.test  t12_parse_compound_assignment.test  t13_if_expr.test  t14_parse_do_block.test  t15_parse_fn_decl.test  t16_parse_bad_fn_decl.test  t17_parse_struct_decl.test  t18_parse_var_decl.test  t19_let_variables_must_be_initialized.test  t1_parse_block.test  t20_parse_print_statement.test  t21_parse_bad_struct_decl.test  t22_parse_loop.test  t23_parse_bad_loop.test  t24_parse_break_and_continue.test  t25_parse_defer_and_return.test  t26_unclosed_string_interpolation_0.test  t26_unclosed_string_interpolation_1.test  t26_unclosed_string_interpolation_2.test  t26_unclosed_string_interpolation_3.test  t27_export.test  t28_bad_export.test  t29_import.test  t2_parse_comma.test  t30_bad_import.test  t31_parse_assignment.test  t32_fn_if_expr_regression.test  t33_magic_method.test  t34_numeric_literals.test  t35_bad_numeric_literals.test  t3_parse_or.test  t4_parse_access.test  t5_parse_increment.test  t6_parse_invalid_assignments.test  t7_parse_array_literal.test  t8_parse_map_literals.test  t9_precedence.test
ves-runtime/: Cargo.toml  README.md  gc_notes.md
ves-runtime/src/: lib.rs  nanbox.rs  value.rs  ves_str.rs  ves_struct.rs
ves-testing/: Cargo.toml  README.md
ves-testing/src/: lib.rs
ves-testing/ves-testing-macro/: Cargo.toml
(+81 files in other folders)
