[package]
name = "experiments"
version = "0.1.0"
authors = ["optimalstrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ves_runtime = { package = "ves-runtime", path = "../ves-runtime" }

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"
fnv = "1.0.7"
ahash = "0.7.2"

[features]
unsafe = []

[[bench]]
name = "fibonacci"
harness = false


[[bench]]
name = "hashes"
harness = false

