[package]
name = "ves-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ves_error = { package = "ves-error", path = "../ves-error" }
ves_parser = { package = "ves-parser", path = "../ves-parser" }
ves_runtime = { package = "ves-runtime", path = "../ves-runtime" }
ves_cc = { package = "bacon_rajan_cc", git = "https://github.com/ves-lang/bacon-rajan-cc" }
static_assertions = "1.1.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
ves_testing = { package = "ves-testing", path = "../ves-testing" }
ves_middle = { package = "ves-middle", path = "../ves-middle" }
