[package]
name = "ves-backend"
version = "0.1.0"
edition = "2018"


[dependencies]
ves_error = { package = "ves-error", path = "../ves-error" }
ves_parser = { package = "ves-parser", path = "../ves-parser" }
ves_middle = { package = "ves-middle", path = "../ves-middle" }

static_assertions = "1.1.0"
hashbrown = { version  = "0.11.2", features = ["nightly"] }
ahash = "0.7.2"
const-random = "0.1.13"


[dev-dependencies]
pretty_assertions = "0.7.2"
ves_testing = { package = "ves-testing", path = "../ves-testing" }

rand = "0.8.3"

[features]
gc-debug = []
