[package]
name = "ves-backend"
version = "0.1.0"
edition = "2018"


[dependencies]
ves_error = { package = "ves-error", path = "../ves-error" }
ves_parser = { package = "ves-parser", path = "../ves-parser" }
ves_middle = { package = "ves-middle", path = "../ves-middle" }
derive_trace = { package = "derive-trace", path = "./derive-trace" }

static_assertions = "1.1.0"
hashbrown = { git  = "https://github.com/rust-lang/hashbrown", features = ["nightly"] }
ahash = "0.7.2"
const-random = "0.1.13"
ibig = "0.3.2"
derive_enum_methods = { git = "https://github.com/ves-lang/derive_enum_methods" }

[dev-dependencies]
pretty_assertions = "0.7.2"
ves_testing = { package = "ves-testing", path = "../ves-testing" }

rand = "0.8.3"

[features]
gc-debug = []
vm-debug = []
