[package]
name = "ves-parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
ves_error = { package = "ves-error", path = "../ves-error" }
plain-msgbox = { git = "https://github.com/optimalstrategy/plain-msgbox" }
ast2str = { git = "https://github.com/optimalstrategy/ast2str" }
ibig = "0.3.2"

[dev-dependencies]
pretty_assertions = "0.7.2"
ves_testing = { package = "ves-testing", path = "../ves-testing" }
