[package]
name = "ves-runtime"
version = "0.1.0"
authors = ["optimalstrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ves_cc = { package = "bacon_rajan_cc", git = "https://github.com/ves-lang/bacon-rajan-cc", features = ["auto_gc", "gc_placement_cc_alloc", "gc_placement_cc_cycle_marked"]}

static_assertions = "1.1.0"
hashbrown = { version  = "0.11.2", features = ["nightly"] }
ahash = "0.7.2"
