[package]
name = "ves-runtime"
version = "0.1.0"
authors = ["optimalstrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
hashbrown = { version  = "0.11.2", features = ["nightly"] }
ahash = "0.7.2"
const-random = "0.1.13"
